<resources>
    <string name="app_name">VictorCitySquare</string>
    <string name="title_activity_main">VictorCitySquare Maps</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Add Location</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Friends</string>
    <string name="title_notifications">Chat</string>
    <string name="title_nearby">Friends</string>
    <string name="title_about_me">Me</string>
    <string name="title_activity_login">Sign in</string>
    <string name="forget_password_button">Forget Password</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_number">Mobile Number</string>
    <string name="prompt_age">Age (12 - 110) years</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_oldpassword">Old Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_verificationCode">Verification Code</string>
    <string name="prompt_useranme">UserName</string>
    <string name="action_register">Register</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_update_password">Update Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_matching_password">Old and New Password are same</string>
    <string name="error_invalid_username">This password should contains at least 6 character [0-9, A-Z,a-z]</string>
    <string name="error_invalid_number">This number is invalid</string>
    <string name="error_invalid_city">This city name is invalid</string>
    <string name="error_invalid_state">This state name is invalid</string>
    <string name="error_invalid_age">This age is invalid</string>
    <string name="error_incorrect_password">This password or email is incorrect</string>
    <string name="error_failed_to_update">Please try again something went wrong while updating</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_share">Share</string>
    <string name="title_friends">Friends</string>
    <string name="title_history">History</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="displayonmap">Display On Map</string>

    <string name="discover_nearby_devices">Discover nearby devices</string>
    <string name="share_device_information">Share device information</string>
    <string name="action_forget_password_button">Forget Password?</string>
    <string name="action_submit">Submit</string>
    <string name="name_dummy">Dummy name</string>
    <string name="directions">Directions</string>
    <string name="add_new_friend_button">Add New Friend</string>

</resources>